# trustfall

./: Cargo.toml
demo-feeds/: Cargo.toml
demo-feeds/src/: adapter.rs  feeds.graphql  main.rs
demo-hackernews/example_queries/: patio11_comments_on_own_blog_posts.ron
demo-hackernews/src/: adapter.rs  main.rs
demo-hytradboi/: Cargo.toml
demo-hytradboi/example_queries/: actions_in_repos_with_min_10_hn_pts.ron
demo-hytradboi/src/: actions_parser.rs  adapter.rs  async_adapter.rs  main.rs  pagers.rs  token.rs
demo-metar/: Cargo.toml
demo-metar/src/: adapter.rs  main.rs
experiments/schemaless/: Cargo.toml
experiments/trustfall_rustdoc/src/: adapter.rs  lib.rs
pytrustfall/: Cargo.toml
pytrustfall/src/: shim.rs
trustfall_cli/: Cargo.toml
trustfall_cli/src/: filesystem_interpreter.rs  lib.rs  main.rs  nullables_interpreter.rs  numbers_interpreter.rs
trustfall_core/: Cargo.toml
trustfall_core/src/: filesystem_interpreter.rs  lib.rs  main.rs  nullables_interpreter.rs  numbers_interpreter.rs  util.rs
trustfall_core/src/frontend/: mod.rs
trustfall_core/src/interpreter/: actor_execution.rs  basic_adapter.rs  executer_components.rs  execution.rs  hints.rs  mod.rs  query_plan.rs  replay.rs  trace.rs
trustfall_core/src/interpreter/hints/: candidates.rs  mod.rs
trustfall_core/src/ir/: indexed.rs  mod.rs  serialization.rs  types.rs  value.rs
trustfall_macros/: Cargo.toml
trustfall_macros/src/: lib.rs
trustfall_wasm/src/: adapter.rs  lib.rs
trustfall_wasm/tests/: common.rs
