[workspace]
members = [
    "trustfall_core",
    "trustfall_macros",
    "trustfall_filetests_macros",
    "trustfall_wasm",
    "trustfall_cli",
    "pytrustfall",
    "demo-hackernews",
    "demo-metar",
    "demo-feeds",
    "demo-hytradboi",
    "experiments/schemaless",
    "experiments/schemaless_wasm",
    "experiments/trustfall_rustdoc",
]
