[package]
name = "trustfall-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# itertools = "0.10.3"
maplit = "1.0.2"
ron = "0.6.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.68"
# async-graphql-parser = "5.0.6"
# async-graphql-value = "5.0.6"

trustfall_core = { path = "../trustfall_core" }
trustfall_filetests_macros = { path = "../trustfall_filetests_macros", version = "0.2.0" }
