[package]
name = "trustfall_macros"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
description = "Macros powering compile time trustfall support"
repository = "https://github.com/obi1kenobi/trustfall"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
trustfall_core = { version = "0.1.1", path = "../trustfall_core" }
